--- a/03-webpack(others)/package.json
+++ b/03-webpack(others)/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
     "less-loader": "^11.0.0",
     "postcss-cli": "^10.0.0",
     "postcss-loader": "^7.0.1",
