--- a/05-webpack normal plugin/package.json
+++ b/05-webpack normal plugin/package.json
@@ -12,8 +12,10 @@
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "less-loader": "^11.0.0",
     "postcss-cli": "^10.0.0",
     "postcss-loader": "^7.0.1",
